overflow fix

--- a/modal.css
+++ b/modal.css
@@ -24,6 +24,7 @@
 .modal-container {
     /*display: none;*/
     height: 100%;
+    left: 0;
     position: absolute;
     top: 0;
     width: 100%;
